# sedna

./: CMakeLists.txt
cmake/: CMakeGraphVizOptions.cmake  Ccache.cmake
export/: CMakeLists.txt
hbp/: CMakeLists.txt
kernel/: CMakeLists.txt
kernel/common/: CMakeLists.txt
kernel/common/errdbg/: CMakeLists.txt
kernel/common/llcommon/: CMakeLists.txt
kernel/common/mmgr/: CMakeLists.txt
kernel/common/st/: CMakeLists.txt
kernel/common/u/: CMakeLists.txt
kernel/gov/: CMakeLists.txt
kernel/sm/: CMakeLists.txt
kernel/tr/: CMakeLists.txt
kernel/tr/bstrie/: btrie_search.cpp
kernel/tr/xqp/: CMakeLists.txt
libs/: CMakeLists.txt
libs/expat/: CMakeLists.txt
libs/libedit/: CMakeLists.txt  libedit-20191231-3.1.tar
libs/pcre/: pcre_pattern.h
term/: CMakeLists.txt
tests/: CMakeLists.txt  sample01.xquery
